# ustad-protocol-mcp

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CLAUDE.md  CLAUDE_DEVELOPMENT.md  CONTAINER_DEPLOYMENT.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  EVALUATION_RUBRICS.md  IMPROVEMENTS.md  ISSUE.md  LICENSE  MCP_COMPATIBILITY_ASSESSMENT.md  Makefile  ORCHESTRATION_INSIGHT.md  PRACTICAL_CLAUDE.md  README.md  REALITY_CHECK.md  RESEARCH_PROPOSAL_SUMMARY.md  SECURITY.md  SEQUENTIAL_THINKING.md  SIMPLE_PROPOSAL.md  TESTING_REALITY_CHECK.md  TODO.md  USTAD_PROTOCOL_PAPER.md  VERIFICATION.md  analyze_blunder.py  analyze_move3.py  analyze_move4.py  analyze_position.py  battle_quick.py  battle_stockfish.py  benchmark_suite.py  chess_coach.py  demo.py  docker-compose.yml  (+22 more)
.github/: DEPLOYMENT.md  branch-protection.md  dependabot.yml
.github/ISSUE_TEMPLATE/: anti-pattern-tool.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  release.yml
archive/: EVALUATION_RUBRICS.md  ORCHESTRATION_INSIGHT.md  PRACTICAL_CLAUDE.md  SEQUENTIAL_THINKING.md  TESTING_REALITY_CHECK.md
scripts/: health_check.py  run_tests.py
src/: __init__.py  auth.py  cli_inspector.py  constants.py  exceptions.py  improved_mcp_server.py  intent_analyzer.py  openai_analyzer.py  orchestrator_config.py  orchestrator_security.py  rate_limiting.py  search_service.py  sequential_thinking.py  sequential_thinking_mcp_server.py  sequential_thinking_orchestrator.py  sequential_thinking_v2.py  sse_events.py  sse_transport.py  thinking_service.py  workflow_orchestrator.py
src/bot_mcp/: __init__.py  advanced_evaluation.py  chess_analyzer.py  mcp_server.py  openai_bot.py  perfect_collaborative_bot.py  perfect_mcp_server.py  simple_mcp_server.py  working_mcp_server.py
src/ustad/: __init__.py  advanced_evaluation.py  bot_engine.py  bot_mcp_server.py  chess_analyzer.py  generic_bot.py  http_mcp_server.py  mcp_server.py  openai_bot.py  perfect_bot.py  perfect_collaborative_bot.py  perfect_mcp_server.py  simple_mcp_server.py  true_perfect_bot.py  ultimate_bot.py  working_mcp_server.py
src/ustad/anti_patterns/: __init__.py  base.py
src/ustad/cognitive_scaffolds/: intent_understanding.py
tests/: __init__.py  conftest.py  test_advanced_evaluation.py  test_auth.py  test_benchmark.py  test_bot_engine.py  test_capabilities.py  test_chess_analyzer.py  test_framework.py  test_intent_analyzer.py  test_mcp_integration.py  test_mcp_server_comprehensive.py  test_openai_analyzer.py  test_orchestrator_security.py  test_persistence.py  test_rate_limiting.py  test_rigorous_sequential_thinking.py  test_sequential_thinking.py  test_sequential_thinking_v2.py  test_sse_events.py  test_ustad_mcp_server.py  test_workflow_orchestrator.py
